bin/test/fixtures/public/fail/semantic/var_undef.jmm
/*  REASON:
    Variable "j" is undefined.
*/

class T {
    public static void main(String[] a) { 
        int[] i;
        i = new int[10];
        i = j;
    }
}
